utoipa-gen/tests/snapshots/schema_derive_test__derive_nullable_tuple.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "info": {
      "deprecated": true,
      "description": "This is description",
      "items": false,
      "prefixItems": [
        {
          "type": "string"
        },
        {
          "format": "int64",
          "type": "integer"
        }
      ],
      "type": [
        "array",
        "null"
      ]
    }
  },
  "type": "object"
}
