utoipa-gen/tests/snapshots/schema_derive_test__derive_option_ref_with_nullable_false.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: schema
---
{
  "properties": {
    "default_optional_ref": {
      "oneOf": [
        {
          "$ref": "#/components/schemas/RefType"
        },
        {
          "type": "null"
        }
      ]
    },
    "optional_ref": {
      "$ref": "#/components/schemas/RefType"
    }
  },
  "type": "object"
}
