utoipa-gen/tests/snapshots/schema_derive_test__derive_parse_serde_field_attributes.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: post
snapshot_kind: text
---
{
  "properties": {
    "longFieldNum": {
      "format": "int64",
      "type": "integer"
    },
    "uuid": {
      "type": "string"
    }
  },
  "required": [
    "uuid",
    "longFieldNum"
  ],
  "type": "object"
}
