utoipa-gen/tests/snapshots/schema_derive_test__derive_repr_enum_no_repr.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 2374
expression: value
---
{
  "enum": [
    "Error",
    "Ok"
  ],
  "type": "string"
}
