utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_for_repr_enum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 2255
expression: value
---
{
  "default": 0,
  "enum": [
    -1,
    0,
    1
  ],
  "example": 1,
  "type": "integer"
}
